Fix smooth scrolling on ios

--- a/examples/examples.css
+++ b/examples/examples.css
@@ -8,6 +8,7 @@ body,
 
 .container-main {
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .container-main.container-fixed-top {
